--- a/public/index.html
+++ b/public/index.html
@@ -482,11 +482,18 @@
 			var kode = document.createTextNode('.postbody {display: none;} .' + areastohide.join(', .') + '{ display: block;}')
 			wrapper.appendChild(kode);
 		};
-		if(load == 'true'){}else{
-			socket.emit('addfilter', {"areas": areastohide, "usersub": localStorage.getItem('notifiering')});
+		if (!("Notification" in window)) {
+			document.getElementById('notificationsetting').setAttribute('style', 'display: none;');
+		}else{
+			if(load == 'true'){}else{
+				socket.emit('addfilter', {"areas": areastohide, "usersub": localStorage.getItem('notifiering')});
+			};
 		};
 	};
 	function loadfilterarea(){
+		if (!("Notification" in window)) {
+			document.getElementById('notificationsetting').setAttribute('style', 'display: none;');
+		};
 		if(!localStorage.getItem('geofence') || localStorage.getItem('geofence') == ''){}else{
 			var filterstoadd = localStorage.getItem('geofence').split(',');
 			var checkboxes = document.getElementById('settings').getElementsByTagName('input');
