--- a/public/index.html
+++ b/public/index.html
@@ -434,7 +434,7 @@
 <script src="socket.io/socket.io.js"></script>
 <script src="script/megapix-image.js"></script>
 <script src='https://cdn.rawgit.com/naptha/tesseract.js/1.0.10/dist/tesseract.js'></script>
-<script src="https://www.gymlund.tk/library/gymlund.js" type="text/javascript"></script>
+<script src="script/gymlund.js" type="text/javascript"></script>
 <script type="text/javascript">
 	var config = {
 		imgdesaturate: 60, //0-255
